1. added display block to a element styling, in base.scss 2. in side-navbar, changed position to fixed, and improved responsive spacing

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -51,6 +51,7 @@ pre {
 }
 
 a {
+    display: block;
     text-decoration: none;
     color: inherit;
 }
