--- a/src/assets/styles/cmps/_side-navbar.scss
+++ b/src/assets/styles/cmps/_side-navbar.scss
@@ -1,10 +1,10 @@
 .side-navbar-wrapper {
     & :is(.black-transparent-bg-wrapper, .side-navbar-container) {
-        position: absolute;
+        position: fixed;
         top: 0;
         bottom: 0;
         right: 0;
-        height: 100%;
+        height: 100vh;
     }
 
     & .side-navbar-container nav p {
@@ -13,13 +13,13 @@
 
     & .black-transparent-bg-wrapper {
         left: 0;
-        width: 100%;
+        width: 100vw;
         background-color: rgba(0, 0, 0, 0.5);
     }
 
     & .side-navbar-container {
-        min-width: 63%;
-        max-width: 100%;
+        min-width: 63vw;
+        max-width: calc(100vw - 100px);
         background-color: $main-teal-clr6;
         color: $white-clr;
         padding-inline: 25px;
@@ -29,6 +29,7 @@
             display: grid;
             grid-template-columns: 1fr auto;
             justify-content: space-between;
+            gap: 5px;
 
             & .btn-close {
                 @include clean-btn;
@@ -44,7 +45,7 @@
 
             & nav {
                 padding-block: 56px;
-                padding-inline: 23px;
+                padding-inline-start: 23px;
 
                 & .nav-list {
                     & > * {
